pause and play for charts

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,15 +8,20 @@ svg{
 	border:1px solid blue;
 }
 
-circle{
-	stroke: blue;
-}
-
 .grid{
 	stroke: lightgrey;
 }
 
-.close-price{
+.line{
 	stroke: steelblue;
 	fill:none;
+}
+
+.bar{
+	stroke: steelblue;
+	fill:steelblue;
+}
+
+h1 {
+    text-align: center;
 }
