--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,13 +3,11 @@
 }
 
 .sortFields{
-	float:left;
 	height:20px;
+	display: inline-block;
 }
 
 .subjectDivs{
-	float:left;
-	height:20px;
 	border: 1px solid white;
 	border-radius: 10px;
 	width:70px;
@@ -18,6 +16,25 @@
 	font-family: sans-serif;
 	font-size: 14px;	
 	font-weight: 200;
+	display: inline-block;
+}
+
+.label{
+	color: black;
+	font-size: 15px;	
+	font-weight: 400;
+}
+
+button{
+	height: 25px;
+	background-color: #E7E7E7;
+	border: 1px solid white;
+	border-radius: 10px;
+	box-shadow: 0px 2px 0px #888888;
+	font-family: sans-serif;
+	font-size: 14px;	
+	font-weight: 400;
+	margin: 2px;
 }
 
 .data{
