--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,7 @@
-.bars{
-	border: 1px solid white;
+body{
+	font-family: sans-serif;
+	font-size: 12px;	
+	font-weight: 100;
 }
 
 .students{
@@ -7,11 +9,12 @@
 
 }
 .subjects{
+	top:310px;
 	position: absolute;
 }
 .sortFields{
-	height:20px;
-	/*display: inline-block;*/
+	/*height:20px;*/
+	top:280px;
 	position: absolute;
 }
 
@@ -19,18 +22,14 @@
 	border: 1px solid white;
 	border-radius: 10px;
 	width:70px;
+	padding-bottom: 2px;
 	text-align:center;
 	color: white;
-	font-family: sans-serif;
-	font-size: 14px;	
-	font-weight: 200;
 	display: inline-block;
 }
 
 .label{
 	color: black;
-	font-size: 15px;	
-	font-weight: 400;
 }
 
 button{
@@ -39,22 +38,16 @@ button{
 	border: 1px solid white;
 	border-radius: 10px;
 	box-shadow: 0px 2px 0px #888888;
-	font-family: sans-serif;
-	font-size: 14px;	
-	font-weight: 400;
 	margin: 2px;
 }
 
 .data{
 	position: absolute;
-	height: 10px;
+	height: 20px;
 	border: 1px solid white;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	/*padding-top: 2px;*/
+	/*padding-bottom: 2px;*/
 	border-radius: 10px;
 	text-align:center;
 	color: white;
-	font-family: sans-serif;
-	font-size: 14px;	
-	font-weight: 200;
 }
