--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,15 +15,16 @@ body{
 .sortFields{
 	top:240px;
 	position: absolute;
+	margin-bottom: 10px;
 }
 
 .subjectDivs {
-	width:70px;
-	padding-bottom: 2px;
+	margin-top: 20px;
+	height: 18px;
 	color: white;
 	display: inline-block;
 	border: 1.5px solid white;
-	padding-top: 1px;
+	padding-top: 2px;
 	border-radius: 7px;
 	text-align:center;
 	color: white;
