--- a/public/css/table.css
+++ b/public/css/table.css
@@ -1,4 +1,11 @@
 .numberTable{
 	border: 1px solid black;
-	width: 500px;
+	width: 600px;
+	height: 50px;
+}
+
+.cell{
+	border: 1px solid black;
+	width: 20px;
+	height: 20px;
 }
