--- a/public/Numbers/style.css
+++ b/public/Numbers/style.css
@@ -3,11 +3,19 @@
 	padding: 10px;
 }
 
-table, th, td {
+td {
     border: 1px solid black;
     padding: 5px;
+    width:50px;
 }
 
 .title{
     font: italic bold 12px/30px Georgia, san-serif"
+}
+
+.blocks{
+    float:left;
+    border: 1.5px solid black;
+    margin: 3px;
+    padding:8px;
 }
